--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+     --color-primary: 255 255 255;
+    --color-secondary: 0 0 0;
+  }
+  :root[data-theme="dark"]{
+    --color-primary: 0 0 0;
+    --color-secondary:255 255 255;
+  }
+}
+
+* {
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
